--- a/TicketEscalator.WebAPI/appsettings.json
+++ b/TicketEscalator.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqliteConnection": "Data Source=database.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
