--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,4 @@
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/dotnetcore,visualstudiocode
-/**/database.db
+/**/database.db*
